--- a/index.html
+++ b/index.html
@@ -12,36 +12,38 @@
 </head>
 <body>
 
-    <div class="col-md-4">
-      <h3 class="text-center" id="displayName">Não autenticado</h3>
-      <br>
-      <form>
-        <div class="form-group">
-          <label for="emailInput">E-mail</label>
-          <input type="email" class="form-control" id="emailInput" placeholder="E-mail">
-        </div>
-        <div class="form-group">
-          <label for="emailInput">Senha</label>
-          <input type="password" class="form-control" id="passwordInput" placeholder="Senha">
-        </div>
-      </form>
-
-      <button class="btn btn-lg btn-block btn-primary" id="authEmailPassButton">Autenticar</button>
-      <button class="btn btn-lg btn-block btn-info" id="createUserButton">Criar nova conta</button>
-      <br>
-
-      <p class="text-center"><small>-- ou --</small></p>
-
-      <p class="text-center">
-        <button class="btn btn-lg btn-default" id="authGitHubButto"><i class="fa fa-github fa-2x"></i></button>
-        <button class="btn btn-lg btn-primary" id="authFacebookButton"><i class="fa fa-facebook fa-2x"></i></button>
-        <button class="btn btn-lg btn-info" id="authTwitterButton"><i class="fa fa-twitter fa-2x"></i></button>
-        <button class="btn btn-lg btn-danger" id="authGoogleButton"><i class="fa fa-google fa-2x"></i></button>
-        <button class="btn btn-lg btn-warning" id="authAnonymousButton"><i class="fa fa-user fa-2x"></i></button>
-      </p>
-
-
-
+    <div class="container">
+      <div class="col-6" style="margin: 0 auto;">
+        <h3 class="text-center" id="displayName">Não autenticado</h3>
+        <br>
+        <form>
+          <div class="form-group">
+            <label for="emailInput">E-mail</label>
+            <input type="email" class="form-control" id="emailInput" placeholder="E-mail">
+          </div>
+          <div class="form-group">
+            <label for="emailInput">Senha</label>
+            <input type="password" class="form-control" id="passwordInput" placeholder="Senha">
+          </div>
+        </form> 
+  
+        <button class="btn btn-lg btn-block btn-primary" id="authEmailPassButton">Autenticar</button>
+        <button class="btn btn-lg btn-block btn-info" id="createUserButton">Criar nova conta</button>
+        <br>
+  
+        <p class="text-center"><small>-- ou --</small></p>
+  
+        <p class="text-center">
+          <button class="btn btn-lg btn-secondary" id="authGitHubButton"><i class="fa fa-github fa-2x"></i></button>
+          <button class="btn btn-lg btn-primary" id="authFacebookButton"><i class="fa fa-facebook fa-2x"></i></button>
+          <button class="btn btn-lg btn-info" id="authTwitterButton"><i class="fa fa-twitter fa-2x"></i></button>
+          <button class="btn btn-lg btn-danger" id="authGoogleButton"><i class="fa fa-google fa-2x"></i></button>
+          <button class="btn btn-lg btn-warning" id="authAnonymousButton"><i class="fa fa-user fa-2x"></i></button>
+        </p>
+  
+  
+  
+      </div>
     </div>
     
 
